@@ -1,3 +1,7 @@
+2003-12-02  Tim Waugh  <twaugh@redhat.com>
+	* gramps.spec.in: Add more docs.
+	* Makefile.am: No need for dist-hook.
+
 2003-12-01  Don Allingham  <dallingham@users.sourceforge.net>
 	* src/gramps_main.py: update person table after edit
 
